--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,13 @@
 @import "tailwindcss";
 
-:root {
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
+} */
+
+:root {
+  --background: rgb(39, 39, 42);
+  --foreground: #f7f7f7;
 }
 
 @theme inline {
@@ -12,15 +17,214 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
+/* :root {
+  --background: #0a0a0a;
+  --foreground: #ededed;
+} */
 
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.wrapper {
+  /* text-align: center; */
+  /* padding-left: 24px;
+  padding-right: 24px; */
+  /* padding-top: 30px;
+  padding-bottom:  */
+}
+
+.header {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  background-color: rgb(63, 63, 70);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  /* margin-left: 24px; */
+  padding-left: 24px;
+  padding-right: 24px;
+  /* padding-top: 12px; */
+  /* height: clamp(3rem, 3rem, fit-content); */
+  min-height: 3rem;
+  max-height: auto;
+  /* position: fixed; */
+  /* vertical-align: middle; */
+}
+
+.headerLeft {
+  /* align-self: start; */
+  /* justify-self: start; */
+  align-items: center;
+}
+
+.headerLeft:hover {
+  text-shadow: rgb(168, 186, 255) 0px 0 2px;
+  cursor: pointer;
+}
+
+.headerRight {
+  /* align-self: end; */
+  /* justify-self: end; */
+  display: flex;
+  flex-direction: row;
+  /* justify-content: center; */
+  align-items: center;
+  /* justify-content: space-between; */
+  /* padding: 10px; */
+}
+
+.intro {
+  /* background-color: blue; */
+  display: grid;
+  grid-template-columns: clamp(300px, 50%, 500px) clamp(200px, 50%, 700px);
+  /* justify-content: center; */
+  /* display: flex; */
+  /* margin-top: 3rem; */
+  /* padding-top: 3rem; */
+}
+
+
+.introText {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-wrap: wrap;
+  padding-left: clamp(1rem, 8%, 3rem);
+  /* background-color: red; */
+}
+
+
+
+.bio {
+  background-color: green;
+}
+
+.projects {
+  background-color: orange;
+}
+
+.footer {
+  background-color: grey;
+}
+
+.bodyWrapper {
+  padding-left: 40px;
+  padding-right: 40px;
+  margin-top: 3rem;
+  display: grid;
+  grid-template-columns: minmax(100px, 1000px);
+  justify-content: center;
+  /* align-items: center; */
+  /* position:absolute; */
+}
+
+.links {
+  display: flex;
+  flex-direction: row;
+}
+
+.bioWrapper {
+  display: grid;
+  background-color: rgb(68, 62, 62);
+  grid-template-columns: 50% 50%;
+}
+
+.projectsWrapper {
+  background-color: rgb(34, 48, 128);
+}
+
+.headerAbout:hover {
+  text-shadow: rgb(168, 186, 255) 0px 0 3px;
+  cursor: pointer;
+}
+
+.headerProjects:hover {
+  text-shadow: rgb(168, 186, 255) 0px 0 3px;
+  cursor: pointer;
+}
+
+.headerLM {
+  display: grid;
+  grid-template-columns: 32px;
+  /* justify-content: center; */
+  align-items: center;
+  column-gap: 14px;
+}
+
+.headerLM:hover {
+  text-shadow: rgb(168, 186, 255) 0px 0 3px;
+}
+
+.icon:hover {
+  box-shadow: rgb(168, 186, 255) 0px 0 10px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.pfp {
+  border-radius: 45%;
+  /* justify-self: center; */
+}
+
+.pfpDiv {
+  /* justify-content: left; */
+  /* align-items: left; */
+  /* background-color: red; */
+  /* width: 100%; */
+}
+
+/* Mobile layout */
+@media (max-width: 768px) {
+  .intro {
+    display: grid;
+    grid-template-columns: 100%;
+  }
+
+  .introText {
+    padding-left: 0;
+  }
+
+  .bodyWrapper {
+    padding-left: clamp(4px, 10%, 40px);
+    padding-right: clamp(4px, 10%, 40px);
+    margin-top: 3rem;
+    /* position:absolute; */
+  }
+
+  .header {
+    flex-direction: column;
+    text-wrap: balance;
+  }
+
+  .headerLeft {
+    text-align: center;
+  }
+
+  .headerRight {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .headerProjects {
+    margin-left: 0;
+  }
+
+  .headerLM {
+    margin-left: 0;
+  }
+
+  .pfp {
+    justify-self: center;
+  }
 }
