--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,10 @@
   --foreground: #171717;
 } */
 
+* {
+  box-sizing: border-box;
+}
+
 :root {
   --background: rgb(39, 39, 42);
   --foreground: #f7f7f7;
@@ -104,15 +108,38 @@ body {
 }
 
 .bio {
-  background-color: green;
+  /* background-color: green; */
+  display: flex;
+  justify-content: center;
+}
+
+.oval {
+  height: 10px;
+  width: 40px;
+  background-color: #208f5b;
+  border-radius: 40%;
+  display: flex;
+  justify-self: center;
 }
 
 .projects {
-  background-color: orange;
+  /* background-color: orange; */
+  display: flex;
+  justify-content: center;
 }
 
 .footer {
-  background-color: grey;
+  /* background-color: grey; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer2 {
+  /* background-color: grey; */
+  display: flex;
+  align-items: center;
+  /* justify-content: space-between; */
 }
 
 .bodyWrapper {
@@ -126,6 +153,13 @@ body {
   /* position:absolute; */
 }
 
+.projectsBox {
+  border: 1px solid rgb(175, 104, 255);
+  padding: 1rem;
+  box-sizing: border-box;
+  /* background-color: #208f5b; */
+}
+
 .links {
   display: flex;
   flex-direction: row;
@@ -133,12 +167,14 @@ body {
 
 .bioWrapper {
   display: grid;
-  background-color: rgb(68, 62, 62);
+  /* background-color: rgb(68, 62, 62); */
   grid-template-columns: 50% 50%;
 }
 
 .projectsWrapper {
-  background-color: rgb(34, 48, 128);
+  /* background-color: rgb(34, 48, 128); */
+  width: 100%;
+  /* box-sizing: content-box; */
 }
 
 .headerAbout:hover {
@@ -169,6 +205,19 @@ body {
   cursor: pointer;
 }
 
+.projectsArea {
+  /* display: flex; */
+  /* flex: calc(100%/3) 1 1; */
+  /* flex: 2 1 1 1 1; */
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 10px;
+  row-gap: 10px;
+  /* margin: 10px; */
+  width: 100%;
+  /* box-sizing: content-box; */
+}
+
 .pfp {
   border-radius: 45%;
   /* justify-self: center; */
@@ -179,6 +228,57 @@ body {
   /* align-items: left; */
   /* background-color: red; */
   /* width: 100%; */
+}
+
+/* @keyframes smoothbounceball {
+  from {
+    transform: translate3d(0, 0, 0);
+  }
+  to {
+    transform: translate3d(0, 1000px, 0);
+  }
+} */
+
+.ball {
+  animation: bounce 1s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+}
+
+.arrowDownDiv {
+  display: flex;
+  justify-content: center;
+}
+
+.skillBox {
+  background-color: #f7f7f7;
+  border-radius: 5px;
+  padding: 5px 10px 5px 10px;
+  width: fit-content;
+  color: black;
+  text-wrap: nowrap;
+}
+
+.skillBox:hover {
+  background-color: #2ab574;
+  -webkit-transition: background-color 400ms linear;
+  -ms-transition: background-color 400ms linear;
+  transition: background-color 400ms linear;
+}
+
+.skillSection {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.dashBorder {
+  background-color: #208f5b;
+  width: 100%;
+  height: 5px;
+  border-radius: 2px;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 
 /* Mobile layout */
@@ -234,5 +334,27 @@ body {
 
   .pfp {
     justify-self: center;
+  }
+
+  .bioWrapper {
+    grid-template-columns: 100%;
+    grid-template-rows: fit-content fit-content;
+  }
+
+  .bioLeft {
+    margin-right: 0;
+  }
+
+  .bioRight {
+    margin-left: 0;
+  }
+
+  .mySkills {
+    display: flex;
+    justify-content: center;
+  }
+
+  .skillSection {
+    justify-content: center;
   }
 }
